# Buy_and_cry_radar

./: README.md  evaluator.py  main.py  requirements.txt  validator.py
cache/: filtered_news.json  test_cases.json
features/: evaluator.py  validator.py
formatter/: .env  README.md  config.py  draft_generator.py  formatter.py  language_utils.py  main.py  news_clusterer.py  news_processor.py  requierments.txt
formatter/data/: drafts_output.json  news_with_hotness_scores.json  test.json
notebooks/: Formatter.ipynb  evaluator.ipynb  formatter.py  news_with_arguments.json  validator.ipynb
router/: NOTES.md  debug_router.ipynb  demo_router.ipynb  interfax_ids.csv  router.py  sources.py
router/tg_parsing/: README.md  pyproject.toml
router/tg_parsing/src/news_parser/: analyzer.py  clustering.py  models.py  scoring.py  telegram_fetcher.py  text_utils.py
tg_parsing/src/news_parser/: cli.py  telegram_fetcher.py
tg_parsing/tests/: test_analyzer.py
vibe_streamlit/: README.md  app.py  web_service.docx
vibe_streamlit/buycry_radar/: __init__.py  evaluator.py  formatter.py  models.py  pipeline.py  router.py  sample_data.py  validator.py
